--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -30,9 +30,9 @@
     <ul class="sidebar-menu">
         {$menulist}
         <li class="header">{:__('Links')}</li>
-        <li><a href="http://doc.fastadmin.net" target="_blank"><i class="fa fa-list text-red"></i> <span>{:__('Docs')}</span></a></li>
-        <li><a href="http://forum.fastadmin.net" target="_blank"><i class="fa fa-comment text-yellow"></i> <span>{:__('Forum')}</span></a></li>
-        <li><a href="https://jq.qq.com/?_wv=1027&k=487PNBb" target="_blank"><i class="fa fa-qq text-aqua"></i> <span>{:__('QQ qun')}</span></a></li>
+        <li><a href="" target="_blank"><i class="fa fa-list text-red"></i> <span>{:__('Docs')}</span></a></li>
+        <li><a href="tencent://message/?Menu=yes&uin=280445655" target="_blank"><i class="fa fa-comment text-yellow"></i> <span>{:__('Forum')}</span></a></li>
+        <li><a href="https://jq.qq.com/?_wv=1027&k=5fEWULc" target="_blank"><i class="fa fa-qq text-aqua"></i> <span>{:__('QQ qun')}</span></a></li>
     </ul>
 </section>
 <!-- /.sidebar -->
