--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -22,7 +22,7 @@
         <ul class="nav navbar-nav">
 
             <li>
-                <a href="__PUBLIC__" target="_blank"><i class="fa fa-home" style="font-size:14px;"></i></a>
+                <a href="" target="_blank"><i class="fa fa-home" style="font-size:14px;"></i></a>
             </li>
 
             <li class="dropdown notifications-menu">
@@ -33,7 +33,7 @@
                 <ul class="dropdown-menu">
                     <li class="header">{:__('Latest news')}</li>
                     <li>
-                        <!-- FastAdmin最新更新信息,你可以替换成你自己站点的信息,请注意修改public/assets/js/backend/index.js文件 -->
+                        <!-- admin最新更新信息,你可以替换成你自己站点的信息,请注意修改public/assets/js/backend/index.js文件 -->
                         <ul class="menu">
 
                         </ul>
@@ -87,19 +87,19 @@
                         </p>
                     </li>
                     <!-- Menu Body -->
-                    <li class="user-body">
+                    <!--<li class="user-body">
                         <div class="row">
                             <div class="col-xs-4 text-center">
-                                <a href="http://www.fastadmin.net" target="_blank">官网</a>
+                                <a href="http://www.admin.net" target="_blank">官网</a>
                             </div>
                             <div class="col-xs-4 text-center">
-                                <a href="http://forum.fastadmin.net" target="_blank">论坛</a>
+                                <a href="http://forum.admin.net" target="_blank">论坛</a>
                             </div>
                             <div class="col-xs-4 text-center">
-                                <a href="http://doc.fastadmin.net" target="_blank">文档</a>
+                                <a href="http://doc.admin.net" target="_blank">文档</a>
                             </div>
                         </div>
-                    </li>
+                    </li>-->
                     <!-- Menu Footer-->
                     <li class="user-footer">
                         <div class="pull-left">
