--- a/application/admin/view/dashboard/index.html
+++ b/application/admin/view/dashboard/index.html
@@ -336,7 +336,7 @@
                             <div class="box-header">
                                 <h3 class="box-title">{:__('Recent news')}</h3>
                                 <div class="box-tools pull-right">
-                                    <a href="http://www.fastadmin.net" target="_blank" class="btn btn-box-tool">{:__('More')}</a>
+                                    <a href="http://www.admin.net" target="_blank" class="btn btn-box-tool">{:__('More')}</a>
                                 </div>
                             </div>
                             <div class="box-body" id="news-list">
@@ -349,7 +349,7 @@
                             <div class="box-header">
                                 <h3 class="box-title">{:__('Recent discussion')}</h3>
                                 <div class="box-tools pull-right">
-                                    <a href="http://forum.fastadmin.net" class="btn btn-box-tool">{:__('More')}</a>
+                                    <a href="http://forum.admin.net" class="btn btn-box-tool">{:__('More')}</a>
                                 </div>
                             </div>
                             <div class="box-body" id="discussion-list">
