--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>FastAdmin - 基于ThinkPHP5和Bootstrap的极速后台开发框架</title>
+        <title>Admin - 基于ThinkPHP5和Bootstrap的极速后台开发框架</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -39,14 +39,14 @@
 
                 <div class="collapse navbar-collapse" id="navbar-collapse-menu">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="http://www.fastadmin.net">首页</a></li>
-                        <li><a href="http://www.fastadmin.net/store.html" title="FastAdmin插件市场">插件市场</a></li>
-                        <li><a href="http://www.fastadmin.net/service.html" title="FastAdmin增值服务">服务</a></li>
-                        <li><a href="http://www.fastadmin.net/download.html" title="FastAdmin下载">下载</a></li>
-                        <li><a href="http://www.fastadmin.net/demo.html" title="FastAdmin演示">演示</a></li>
-                        <li><a href="http://forum.fastadmin.net" title="FastAdmin交流社区">社区</a></li>
-                        <li><a href="http://doc.fastadmin.net" title="FastAdmin官方文档">文档</a></li>
-                        <li><a href="http://html.fastadmin.net" title="FastAdmin的HTML版">HTML版</a></li>
+                        <li><a href="http://www.admin.net">首页</a></li>
+                        <li><a href="http://www.admin.net/store.html" title="admin插件市场">插件市场</a></li>
+                        <li><a href="http://www.admin.net/service.html" title="admin增值服务">服务</a></li>
+                        <li><a href="http://www.admin.net/download.html" title="admin下载">下载</a></li>
+                        <li><a href="http://www.admin.net/demo.html" title="admin演示">演示</a></li>
+                        <li><a href="http://forum.admin.net" title="admin交流社区">社区</a></li>
+                        <li><a href="http://doc.admin.net" title="admin官方文档">文档</a></li>
+                        <li><a href="http://html.admin.net" title="admin的HTML版">HTML版</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -60,7 +60,7 @@
                     <div class="col-sm-12">
                         <div class="header-content">
                             <div class="header-content-inner">
-                                <h1>FastAdmin</h1>
+                                <h1>admin</h1>
                                 <h3>基于ThinkPHP5和Bootstrap的极速后台开发框架</h3>
                                 <a href="{:url('admin/index/login')}" class="btn btn-outline btn-xl page-scroll">登录后台</a>
                             </div>
@@ -122,7 +122,7 @@
                                     <div class="feature-item">
                                         <i class="icon-puzzle text-primary"></i>
                                         <h3>自由可扩展</h3>
-                                        <p class="text-muted">FastAdmin提供强大的扩展中心，可直接在线安装和卸载插件，同时支持命令行一键操作</p>
+                                        <p class="text-muted">admin提供强大的扩展中心，可直接在线安装和卸载插件，同时支持命令行一键操作</p>
                                     </div>
                                 </div>
                             </div>
@@ -136,7 +136,7 @@
             <div class="cta-content">
                 <div class="container">
                     <h2>不要犹豫<br>开始行动</h2>
-                    <a href="http://doc.fastadmin.net/docs/contributing.html" class="btn btn-outline btn-xl page-scroll">为FastAdmin贡献代码!</a>
+                    <a href="http://doc.admin.net/docs/contributing.html" class="btn btn-outline btn-xl page-scroll">为admin贡献代码!</a>
                 </div>
             </div>
             <div class="overlay"></div>
@@ -144,13 +144,13 @@
 
         <footer>
             <div class="container">
-                <p>&copy; 2017 FastAdmin. All Rights Reserved.</p>
+                <p>&copy; 2017 admin. All Rights Reserved.</p>
                 <ul class="list-inline">
                     <li>
-                        <a href="https://gitee.com/karsonzhang/fastadmin">码云</a>
+                        <a href="https://gitee.com/karsonzhang/admin">码云</a>
                     </li>
                     <li>
-                        <a href="https://github.com/karsonzhang/fastadmin">Github</a>
+                        <a href="https://github.com/karsonzhang/admin">Github</a>
                     </li>
                     <li>
                         <a href="http://shang.qq.com/wpa/qunwpa?idkey=46c326e570d0f97cfae1f8257ae82322192ec8841c79b2136446df0b3b62028c">QQ群</a>
@@ -176,7 +176,7 @@
 
 
                 //发送版本统计信息
-                try {
+                /*try {
                     var installed = localStorage.getItem("installed");
                     console.log(installed);
                     if (!installed) {
@@ -197,7 +197,7 @@
                     }
                 } catch (e) {
 
-                }
+                }*/
 
             });
         </script>
