--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -97,7 +97,7 @@
                             </form>
                         </div>
                     </div>
-                    <p class="copyright"><a href="http://www.fastadmin.net?ref=demo">Powered By FastAdmin</a></p>
+                    <p class="copyright"><a href="http://www.admin.net?ref=demo">Powered By Admin</a></p>
                 </div>
             </div>
         </div>
