--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -12,7 +12,7 @@
             <input id="c-customer_name" data-source="customer/customer/get_customer" data-params='{"field":"customer_name","search_field":"customer_name","orderBy":["id desc","updatetime"]}' data-rule="required" class="form-control selectpage" name="row[customer_name]" type="text" value="">
         </div>-->
         <div class="col-xs-12 col-sm-8">
-            <input id="c-customer_name" data-rule="required" data-source="customer/customer/get_customer" data-params='{"field":"customer_name","search_field":"customer_name","orderBy":["id desc","updatetime"]}' class="form-control selectpage" name="row[customer_name]" type="text" value="">
+            <input id="c-customer_name" data-rule="required" class="form-control selectpage" name="row[customer_name]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
@@ -38,7 +38,7 @@
     <div class="form-group">
         <label for="c-order_adds" class="control-label col-xs-12 col-sm-2">{:__('Order_adds')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="number">
+            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="text" disabled>
         </div>
     </div>
     <div class="form-group">
