--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -16,10 +16,54 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-goods_ids" class="control-label col-xs-12 col-sm-2">{:__('Goods_ids')}:</label>
+        <!--<label for="c-goods_ids" class="control-label col-xs-12 col-sm-2">{:__('Goods_ids')}:</label>-->
+        <div class="control-label col-xs-12 col-sm-2">
+            <dd><a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a></dd>
+        </div>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-goods_ids" data-rule="required" data-source="goods/index" data-multiple="true"
-                   class="form-control selectpage" name="row[goods_ids]" type="text" value="">
+            <table class="table table-striped" id="append_table">
+                <tr>
+                    <th>商品编号</th>
+                    <th>商品名称</th>
+                    <th>CAS号</th>
+                    <th>规格</th>
+                    <th>数量</th>
+                    <th>单价</th>
+                    <th>小计</th>
+                    <th>备注</th>
+                    <th></th>
+                </tr>
+                <tr id="clone_obj" style="display: none">
+                    <td>1</td>
+                    <td>
+                        <input type="text" name="" class="form-control goods_info" value="" size="10" />
+                    </td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>
+                        <span class="btn btn-sm btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>
+                        <input type="text" name="" class="form-control goods_info" value="" />
+                    </td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>
+                        <span class="btn btn-sm btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
     <div class="form-group">
