--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -1,8 +1,14 @@
+<style>
+    .table th, .table td {
+        text-align: center;
+        vertical-align: middle!important;
+    }
+</style>
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
         <label for="c-order_id" class="control-label col-xs-12 col-sm-2">{:__('Order_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <input id="c-order_id" data-rule="required" class="form-control" name="row[order_id]" type="text" value="" disabled>
         </div>
     </div>
@@ -11,17 +17,17 @@
         <!--<div class="col-xs-12 col-sm-8">
             <input id="c-customer_name" data-source="customer/customer/get_customer" data-params='{"field":"customer_name","search_field":"customer_name","orderBy":["id desc","updatetime"]}' data-rule="required" class="form-control selectpage" name="row[customer_name]" type="text" value="">
         </div>-->
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <input id="c-customer_name" data-rule="required" class="form-control selectpage" name="row[customer_name]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
         <!--<label for="c-goods_ids" class="control-label col-xs-12 col-sm-2">{:__('Goods_ids')}:</label>-->
         <div class="control-label col-xs-12 col-sm-2">
-            <dd><a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a></dd>
+
         </div>
-        <div class="col-xs-12 col-sm-8">
-            <table class="table table-striped" id="append_table">
+        <div class="col-xs-12 col-sm-9">
+            <table  id="append_table" class="table table-striped table-bordered table-hover" align="center" style="margin-bottom:5px;">
                 <tr>
                     <th>商品编号</th>
                     <th>商品名称</th>
@@ -34,41 +40,42 @@
                     <th></th>
                 </tr>
                 <tr id="clone_obj" style="display: none">
-                    <td>1</td>
-                    <td>
-                        <input type="text" name="" class="form-control goods_info" value="" size="10" />
+                    <td class="goods_id"></td>
+                    <td style="max-width:180px;">
+                        <input type="text" name="" class="form-control goods_info" value=""/>
                     </td>
-                    <td>3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>8</td>
+                    <td class="goods_cas"></td>
+                    <td class="spec"></td>
+                    <td class="number"></td>
+                    <td class="s_price"></td>
+                    <td class="num_sum"></td>
+                    <td style="max-width: 80px;"><input type="text" name="remark"  class="form-control" value=""></td>
                     <td>
-                        <span class="btn btn-sm btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
+                        <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
                     </td>
                 </tr>
-                <tr>
-                    <td>1</td>
-                    <td>
-                        <input type="text" name="" class="form-control goods_info" value="" />
+                <tr id="append_obj_1">
+                    <td class="goods_id"></td>
+                    <td style="max-width:180px;">
+                        <input type="text" name="" class="form-control goods_info" value=""/>
                     </td>
-                    <td>3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>8</td>
+                    <td class="goods_cas"></td>
+                    <td class="spec"></td>
+                    <td class="number"></td>
+                    <td class="s_price"></td>
+                    <td class="num_sum"></td>
+                    <td style="max-width: 80px;"><input type="text" class="form-control" name="remark" value=""></td>
                     <td>
-                        <span class="btn btn-sm btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
+                        <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
                     </td>
                 </tr>
             </table>
+            <dd><a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a></dd>
         </div>
     </div>
     <div class="form-group">
         <label for="c-bill" class="control-label col-xs-12 col-sm-2">{:__('Bill')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
 
             <select id="c-bill" data-rule="required" class="form-control selectpicker" name="row[bill]">
                 {foreach name="billList" item="vo"}
@@ -81,13 +88,13 @@
     </div>
     <div class="form-group">
         <label for="c-order_adds" class="control-label col-xs-12 col-sm-2">{:__('Order_adds')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="text" disabled>
         </div>
     </div>
     <div class="form-group">
         <label for="c-delivery_time" class="control-label col-xs-12 col-sm-2">{:__('Delivery_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <input id="c-delivery_time" data-rule="required" class="form-control datetimepicker"
                    data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[delivery_time]" type="text"
                    value="{:date('Y-m-d H:i:s')}">
@@ -95,7 +102,7 @@
     </div>
     <div class="form-group">
         <label for="c-payment_method" class="control-label col-xs-12 col-sm-2">{:__('Payment_method')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
 
             <select id="c-payment_method" data-rule="required" class="form-control selectpicker"
                     name="row[payment_method]">
@@ -110,7 +117,7 @@
     <div class="form-group">
         <label for="c-freight_single_number"
                class="control-label col-xs-12 col-sm-2">{:__('Freight_single_number')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <input id="c-freight_single_number" data-rule="required" class="form-control"
                    name="row[freight_single_number]" type="text" value="">
         </div>
@@ -118,14 +125,14 @@
     <div class="form-group">
         <label for="c-invoice_carrier_number"
                class="control-label col-xs-12 col-sm-2">{:__('Invoice_carrier_number')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <input id="c-invoice_carrier_number" data-rule="required" class="form-control"
                    name="row[invoice_carrier_number]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
         <label for="c-order_status" class="control-label col-xs-12 col-sm-2">{:__('Order_status')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
 
             <div class="radio">
                 {foreach name="orderStatusList" item="vo"}
@@ -139,13 +146,13 @@
     </div>
     <div class="form-group">
         <label for="c-remark" class="control-label col-xs-12 col-sm-2">{:__('Remark')}:</label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-1">
             <textarea id="c-remark" class="form-control " rows="5" name="row[remark]" cols="50"></textarea>
         </div>
     </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <button type="submit" class="btn btn-success btn-embossed disabled">{:__('OK')}</button>
             <button type="reset" class="btn btn-default btn-embossed">{:__('Reset')}</button>
         </div>
