--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -70,7 +70,10 @@
                     </td>
                 </tr>
             </table>
-            <dd><a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a></dd>
+            <dd>
+                <a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
+                <div style="float:right">应付金额：<text class="sum_price" style="color:#F00;font-size:17px;">0</text></div>
+            </dd>
         </div>
     </div>
     <div class="form-group">
