--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -1,7 +1,7 @@
 <style>
     .table th, .table td {
         text-align: center;
-        vertical-align: middle!important;
+        vertical-align: middle !important;
     }
 </style>
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
@@ -9,7 +9,8 @@
     <div class="form-group">
         <label for="c-order_id" class="control-label col-xs-12 col-sm-2">{:__('Order_id')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-order_id" data-rule="required" class="form-control" name="row[order_id]" type="text" value="" disabled>
+            <input id="c-order_id" data-rule="required" class="form-control" name="row[order_id]" type="text" value=""
+                   disabled>
         </div>
     </div>
     <div class="form-group">
@@ -18,7 +19,8 @@
             <input id="c-customer_name" data-source="customer/customer/get_customer" data-params='{"field":"customer_name","search_field":"customer_name","orderBy":["id desc","updatetime"]}' data-rule="required" class="form-control selectpage" name="row[customer_name]" type="text" value="">
         </div>-->
         <div class="col-xs-12 col-sm-9">
-            <input id="c-customer_name" data-rule="required" class="form-control selectpage" name="row[customer_name]" type="text" value="">
+            <input id="c-customer_name" data-rule="required" class="form-control selectpage" name="row[customer_name]"
+                   type="text" value="">
         </div>
     </div>
     <div class="form-group">
@@ -27,7 +29,8 @@
 
         </div>
         <div class="col-xs-12 col-sm-9">
-            <table  id="append_table" class="table table-striped table-bordered table-hover" align="center" style="margin-bottom:5px;">
+            <table id="append_table" class="table table-striped table-bordered table-hover" align="center"
+                   style="margin-bottom:5px;">
                 <tr>
                     <th>商品编号</th>
                     <th>商品名称</th>
@@ -49,7 +52,7 @@
                     <td class="number"></td>
                     <td class="s_price"></td>
                     <td class="num_sum"></td>
-                    <td style="max-width: 80px;"><input type="text" name="remark"  class="form-control" value=""></td>
+                    <td style="max-width: 80px;"><input type="text" name="remark" class="form-control" value=""></td>
                     <td>
                         <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
                     </td>
@@ -72,7 +75,9 @@
             </table>
             <dd>
                 <a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
-                <div style="float:right">应付金额：<text class="sum_price" style="color:#F00;font-size:17px;">0</text></div>
+                <div style="float:right">应付金额：
+                    <text class="sum_price" style="color:#F00;font-size:17px;">0</text>
+                </div>
             </dd>
         </div>
     </div>
@@ -92,7 +97,8 @@
     <div class="form-group">
         <label for="c-order_adds" class="control-label col-xs-12 col-sm-2">{:__('Order_adds')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="text" disabled>
+            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="text"
+                   disabled>
         </div>
     </div>
     <div class="form-group">
@@ -149,7 +155,7 @@
     </div>
     <div class="form-group">
         <label for="c-remark" class="control-label col-xs-12 col-sm-2">{:__('Remark')}:</label>
-        <div class="col-xs-12 col-sm-1">
+        <div class="col-xs-12 col-sm-9">
             <textarea id="c-remark" class="form-control " rows="5" name="row[remark]" cols="50"></textarea>
         </div>
     </div>
