--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -45,7 +45,7 @@
                 <tr id="clone_obj" style="display: none">
                     <td class="goods_id"></td>
                     <td style="max-width:180px;">
-                        <input type="text" name="" class="form-control goods_info" value=""/>
+                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value=""/>
                     </td>
                     <td class="goods_cas"></td>
                     <td class="spec"></td>
@@ -60,7 +60,7 @@
                 <tr id="append_obj_1">
                     <td class="goods_id"></td>
                     <td style="max-width:180px;">
-                        <input type="text" name="" class="form-control goods_info" value=""/>
+                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value=""/>
                     </td>
                     <td class="goods_cas"></td>
                     <td class="spec"></td>
