--- a/application/admin/view/address/index/add.html
+++ b/application/admin/view/address/index/add.html
@@ -24,7 +24,7 @@
             </tr>
             <tr>
                 <td style="width:100px;">电话<text>*</text></td>
-                <td><input   class="form-control" name="mobile" value="" type="text"></td>
+                <td><input   class="form-control" name="mobile" value="" type="number"></td>
             </tr>
             <tr>
                 <td style="width:100px;">详细地址<text>*</text></td>
