--- a/application/admin/view/order/index/edit.html
+++ b/application/admin/view/order/index/edit.html
@@ -1,92 +1,175 @@
+<style>
+    .table th, .table td {
+        text-align: center;
+        vertical-align: middle !important;
+    }
+</style>
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
         <label for="c-order_id" class="control-label col-xs-12 col-sm-2">{:__('Order_id')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-order_id" data-rule="required" data-source="order/index" class="form-control selectpage" name="row[order_id]" type="text" value="{$row.order_id}">
+        <div class="col-xs-12 col-sm-9">
+            <input id="c-order_id" data-rule="required" class="form-control" name="row[order_id]" type="text" value=""
+            >
         </div>
     </div>
     <div class="form-group">
         <label for="c-customer_name" class="control-label col-xs-12 col-sm-2">{:__('Customer_name')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-customer_name" data-rule="required" class="form-control" name="row[customer_name]" type="text" value="{$row.customer_name}">
+        <!--<div class="col-xs-12 col-sm-8">
+            <input id="c-customer_name" data-source="customer/customer/get_customer" data-params='{"field":"customer_name","search_field":"customer_name","orderBy":["id desc","updatetime"]}' data-rule="required" class="form-control selectpage" name="row[customer_name]" type="text" value="">
+        </div>-->
+        <div class="col-xs-12 col-sm-9">
+            <input id="c-customer_name" data-rule="required" class="form-control selectpage" name="row[customer_name]"
+                   type="text" value="">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-goods_ids" class="control-label col-xs-12 col-sm-2">{:__('Goods_ids')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-goods_ids" data-rule="required" data-source="goods/index" data-multiple="true" class="form-control selectpage" name="row[goods_ids]" type="text" value="{$row.goods_ids}">
+        <!--<label for="c-goods_ids" class="control-label col-xs-12 col-sm-2">{:__('Goods_ids')}:</label>-->
+        <div class="control-label col-xs-12 col-sm-2">
+
+        </div>
+        <div class="col-xs-12 col-sm-9">
+            <table id="append_table" class="table table-striped table-bordered table-hover" align="center"
+                   style="margin-bottom:5px;">
+                <tr>
+                    <th>商品编号</th>
+                    <th>商品名称</th>
+                    <th>CAS号</th>
+                    <th>规格</th>
+                    <th>数量</th>
+                    <th>单价</th>
+                    <th>小计</th>
+                    <th>备注</th>
+                    <th></th>
+                </tr>
+                <tr id="clone_obj" style="display: none">
+                    <td class="goods_id"></td>
+                    <td style="max-width:180px;">
+                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value=""/>
+                    </td>
+                    <td class="goods_cas"></td>
+                    <td class="spec"></td>
+                    <td class="number"></td>
+                    <td class="s_price"></td>
+                    <td class="num_sum"></td>
+                    <td style="max-width: 80px;">
+                        <input type="text" name="goods_order[remark][]" class="form-control" value=""></td>
+                    <td>
+                        <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
+                    </td>
+                </tr>
+                <tr id="append_obj_1">
+                    <td class="goods_id"></td>
+                    <td style="max-width:180px;">
+                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value=""/>
+                    </td>
+                    <td class="goods_cas"></td>
+                    <td class="spec"></td>
+                    <td class="number"></td>
+                    <td class="s_price"></td>
+                    <td class="num_sum"></td>
+                    <td style="max-width: 80px;">
+                        <input type="text" class="form-control" name="goods_order[remark][]" value=""></td>
+                    <td>
+                        <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
+                    </td>
+                </tr>
+            </table>
+            <dd>
+                <a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
+                <div style="float:right">应付金额：
+                    <text class="sum_price" style="color:#F00;font-size:17px;">0</text>
+                </div>
+            </dd>
         </div>
     </div>
     <div class="form-group">
         <label for="c-bill" class="control-label col-xs-12 col-sm-2">{:__('Bill')}:</label>
-        <div class="col-xs-12 col-sm-8">
-                        
-            <select  id="c-bill" data-rule="required" class="form-control selectpicker" name="row[bill]">
+        <div class="col-xs-12 col-sm-9">
+
+            <select id="c-bill" data-rule="required" class="form-control selectpicker" name="row[bill]">
                 {foreach name="billList" item="vo"}
-                    <option value="{$key}" {in name="key" value="$row.bill"}selected{/in}>{$vo}</option>
+                <option value="{$key}" {in name="key" value="" }selected{
+                /in}>{$vo}</option>
                 {/foreach}
             </select>
 
         </div>
     </div>
     <div class="form-group">
-        <label for="c-order_adds" class="control-label col-xs-12 col-sm-2">{:__('Order_adds')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="number" value="{$row.order_adds}">
+        <label for="c-order_adds" class="control-label col-xs-12 col-sm-2">{:__('Order_adds')}: </label>
+
+        <div class="col-xs-12 col-sm-9">
+
+            <span class="form-control">
+                 <i class="fa fa-edit btn btn-default btn-xs open_view"  style="cursor:pointer;display: none;"></i>
+                 <span id="c-order_adds_text"></span>
+            </span>
+            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="hidden"
+            >
         </div>
     </div>
     <div class="form-group">
         <label for="c-delivery_time" class="control-label col-xs-12 col-sm-2">{:__('Delivery_time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-delivery_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[delivery_time]" type="text" value="{$row.delivery_time|datetime}">
+        <div class="col-xs-12 col-sm-9">
+            <input id="c-delivery_time" data-rule="required" class="form-control datetimepicker"
+                   data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[delivery_time]" type="text"
+                   value="{:date('Y-m-d H:i:s')}">
         </div>
     </div>
     <div class="form-group">
         <label for="c-payment_method" class="control-label col-xs-12 col-sm-2">{:__('Payment_method')}:</label>
-        <div class="col-xs-12 col-sm-8">
-                        
-            <select  id="c-payment_method" data-rule="required" class="form-control selectpicker" name="row[payment_method]">
+        <div class="col-xs-12 col-sm-9">
+
+            <select id="c-payment_method" data-rule="required" class="form-control selectpicker"
+                    name="row[payment_method]">
                 {foreach name="paymentMethodList" item="vo"}
-                    <option value="{$key}" {in name="key" value="$row.payment_method"}selected{/in}>{$vo}</option>
+                <option value="{$key}" {in name="key" value="" }selected{
+                /in}>{$vo}</option>
                 {/foreach}
             </select>
 
         </div>
     </div>
     <div class="form-group">
-        <label for="c-freight_single_number" class="control-label col-xs-12 col-sm-2">{:__('Freight_single_number')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-freight_single_number" data-rule="required" class="form-control" name="row[freight_single_number]" type="text" value="{$row.freight_single_number}">
+        <label for="c-freight_single_number"
+               class="control-label col-xs-12 col-sm-2">{:__('Freight_single_number')}:</label>
+        <div class="col-xs-12 col-sm-9">
+            <input id="c-freight_single_number" data-rule="required" class="form-control"
+                   name="row[freight_single_number]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-invoice_carrier_number" class="control-label col-xs-12 col-sm-2">{:__('Invoice_carrier_number')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-invoice_carrier_number" data-rule="required" class="form-control" name="row[invoice_carrier_number]" type="text" value="{$row.invoice_carrier_number}">
+        <label for="c-invoice_carrier_number"
+               class="control-label col-xs-12 col-sm-2">{:__('Invoice_carrier_number')}:</label>
+        <div class="col-xs-12 col-sm-9">
+            <input id="c-invoice_carrier_number" data-rule="required" class="form-control"
+                   name="row[invoice_carrier_number]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
         <label for="c-order_status" class="control-label col-xs-12 col-sm-2">{:__('Order_status')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            
+        <div class="col-xs-12 col-sm-9">
+
             <div class="radio">
-            {foreach name="orderStatusList" item="vo"}
-            <label for="row[order_status]-{$key}"><input id="row[order_status]-{$key}" name="row[order_status]" type="radio" value="{$key}" {in name="key" value="$row.order_status"}checked{/in} /> {$vo}</label> 
-            {/foreach}
+                {foreach name="orderStatusList" item="vo"}
+                <label for="row[order_status]-{$key}"><input id="row[order_status]-{$key}" name="row[order_status]"
+                                                             type="radio" value="{$key}" {in name="key"
+                                                             value="order_status 1" }checked{/in} /> {$vo}</label>
+                {/foreach}
             </div>
 
         </div>
     </div>
     <div class="form-group">
         <label for="c-remark" class="control-label col-xs-12 col-sm-2">{:__('Remark')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <textarea id="c-remark" class="form-control " rows="5" name="row[remark]" cols="50">{$row.remark}</textarea>
+        <div class="col-xs-12 col-sm-9">
+            <textarea id="c-remark" class="form-control " rows="5" name="row[remark]" cols="50"></textarea>
         </div>
     </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-9">
             <button type="submit" class="btn btn-success btn-embossed disabled">{:__('OK')}</button>
             <button type="reset" class="btn btn-default btn-embossed">{:__('Reset')}</button>
         </div>
