--- a/application/admin/view/address/index/info.html
+++ b/application/admin/view/address/index/info.html
@@ -30,7 +30,7 @@
                 <td class="mobile">{$vo.mobile}</td>
                 <td class="delivery_adds">{$vo.delivery_adds}</td>
                 <td>
-                    <a href="" class="btn btn btn-primary btn-sm">编辑</a>
+                    <a href="javascript:void(0)" class="btn btn btn-primary btn-sm adds_edit">编辑</a>
                     <?php if($vo['status'] === 'normal'){echo '<span class="btn btn-warning btn-sm">默认</span>';}else{echo '<a href="javascript:void(0)" class="btn btn-info btn-sm set-normal">设为默认</a>';}?>
                 </td>
             </tr>
