--- a/application/admin/view/order/index/edit.html
+++ b/application/admin/view/order/index/edit.html
@@ -9,7 +9,7 @@
     <div class="form-group">
         <label for="c-order_id" class="control-label col-xs-12 col-sm-2">{:__('Order_id')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-order_id" data-rule="required" class="form-control" name="row[order_id]" type="text" value=""
+            <input id="c-order_id" data-rule="required" class="form-control" name="row[order_id]" type="text" value="{$row.order_id}"
             >
         </div>
     </div>
@@ -20,7 +20,7 @@
         </div>-->
         <div class="col-xs-12 col-sm-9">
             <input id="c-customer_name" data-rule="required" class="form-control selectpage" name="row[customer_name]"
-                   type="text" value="">
+                   type="text" value="" data-init="{$row.customer_name}">
         </div>
     </div>
     <div class="form-group">
@@ -58,22 +58,25 @@
                         <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
                     </td>
                 </tr>
+
+                {foreach name="good_order" item="vo"}
                 <tr id="append_obj_1">
-                    <td class="goods_id"></td>
+                    <td class="goods_id">{$vo.goods_id}</td>
                     <td style="max-width:180px;">
-                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value=""/>
+                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value="" data-init="{$vo.goods_name}"/>
                     </td>
-                    <td class="goods_cas"></td>
-                    <td class="spec"></td>
-                    <td class="number"></td>
-                    <td class="s_price"></td>
-                    <td class="num_sum"></td>
+                    <td class="goods_cas">{$vo.goods_cas}</td>
+                    <td class="spec">{$vo.spec}</td>
+                    <td class="number">{$vo.number}</td>
+                    <td class="s_price">{$vo.s_price}</td>
+                    <td class="num_sum">{$vo.number*$vo.s_price}</td>
                     <td style="max-width: 80px;">
-                        <input type="text" class="form-control" name="goods_order[remark][]" value=""></td>
+                        <input type="text" class="form-control" name="goods_order[remark][]" value="{$vo.remark}"></td>
                     <td>
                         <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
                     </td>
                 </tr>
+                {/foreach}
             </table>
             <dd>
                 <a href="javascript:;" class="append btn btn-sm btn-success"><i class="fa fa-plus"></i></a>
@@ -89,8 +92,7 @@
 
             <select id="c-bill" data-rule="required" class="form-control selectpicker" name="row[bill]">
                 {foreach name="billList" item="vo"}
-                <option value="{$key}" {in name="key" value="" }selected{
-                /in}>{$vo}</option>
+                <option value="{$key}" {in name="key" value="$row.bill"}selected{/in}>{$vo}</option>
                 {/foreach}
             </select>
 
@@ -105,27 +107,22 @@
                  <i class="fa fa-edit btn btn-default btn-xs open_view"  style="cursor:pointer;display: none;"></i>
                  <span id="c-order_adds_text"></span>
             </span>
-            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="hidden"
-            >
+            <input id="c-order_adds" data-rule="required" class="form-control" name="row[order_adds]" type="hidden" value="{$row.order_adds}">
         </div>
     </div>
     <div class="form-group">
         <label for="c-delivery_time" class="control-label col-xs-12 col-sm-2">{:__('Delivery_time')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-delivery_time" data-rule="required" class="form-control datetimepicker"
-                   data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[delivery_time]" type="text"
-                   value="{:date('Y-m-d H:i:s')}">
+            <input id="c-delivery_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[delivery_time]" type="text" value="{$row.delivery_time|datetime}">
         </div>
     </div>
     <div class="form-group">
         <label for="c-payment_method" class="control-label col-xs-12 col-sm-2">{:__('Payment_method')}:</label>
         <div class="col-xs-12 col-sm-9">
 
-            <select id="c-payment_method" data-rule="required" class="form-control selectpicker"
-                    name="row[payment_method]">
+            <select  id="c-payment_method" data-rule="required" class="form-control selectpicker" name="row[payment_method]">
                 {foreach name="paymentMethodList" item="vo"}
-                <option value="{$key}" {in name="key" value="" }selected{
-                /in}>{$vo}</option>
+                <option value="{$key}" {in name="key" value="$row.payment_method"}selected{/in}>{$vo}</option>
                 {/foreach}
             </select>
 
@@ -135,16 +132,14 @@
         <label for="c-freight_single_number"
                class="control-label col-xs-12 col-sm-2">{:__('Freight_single_number')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-freight_single_number" data-rule="required" class="form-control"
-                   name="row[freight_single_number]" type="text" value="">
+            <input id="c-freight_single_number" data-rule="required" class="form-control" name="row[freight_single_number]" type="text" value="{$row.freight_single_number}">
         </div>
     </div>
     <div class="form-group">
         <label for="c-invoice_carrier_number"
                class="control-label col-xs-12 col-sm-2">{:__('Invoice_carrier_number')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-invoice_carrier_number" data-rule="required" class="form-control"
-                   name="row[invoice_carrier_number]" type="text" value="">
+            <input id="c-invoice_carrier_number" data-rule="required" class="form-control" name="row[invoice_carrier_number]" type="text" value="{$row.invoice_carrier_number}">
         </div>
     </div>
     <div class="form-group">
@@ -153,9 +148,7 @@
 
             <div class="radio">
                 {foreach name="orderStatusList" item="vo"}
-                <label for="row[order_status]-{$key}"><input id="row[order_status]-{$key}" name="row[order_status]"
-                                                             type="radio" value="{$key}" {in name="key"
-                                                             value="order_status 1" }checked{/in} /> {$vo}</label>
+                <label for="row[order_status]-{$key}"><input id="row[order_status]-{$key}" name="row[order_status]" type="radio" value="{$key}" {in name="key" value="$row.order_status"}checked{/in} /> {$vo}</label>
                 {/foreach}
             </div>
 
@@ -164,7 +157,7 @@
     <div class="form-group">
         <label for="c-remark" class="control-label col-xs-12 col-sm-2">{:__('Remark')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <textarea id="c-remark" class="form-control " rows="5" name="row[remark]" cols="50"></textarea>
+            <textarea id="c-remark" class="form-control " rows="5" name="row[remark]" cols="50">{$row.remark}</textarea>
         </div>
     </div>
     <div class="form-group layer-footer">
