--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -138,7 +138,7 @@
         <label for="c-freight_single_number"
                class="control-label col-xs-12 col-sm-2">{:__('Freight_single_number')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-freight_single_number" data-rule="required" class="form-control"
+            <input id="c-freight_single_number" class="form-control"
                    name="row[freight_single_number]" type="text" value="">
         </div>
     </div>
@@ -146,7 +146,7 @@
         <label for="c-invoice_carrier_number"
                class="control-label col-xs-12 col-sm-2">{:__('Invoice_carrier_number')}:</label>
         <div class="col-xs-12 col-sm-9">
-            <input id="c-invoice_carrier_number" data-rule="required" class="form-control"
+            <input id="c-invoice_carrier_number" class="form-control"
                    name="row[invoice_carrier_number]" type="text" value="">
         </div>
     </div>
