--- a/application/admin/view/order/index/add.html
+++ b/application/admin/view/order/index/add.html
@@ -46,7 +46,7 @@
                 <tr id="clone_obj" style="display: none">
                     <td class="goods_id"></td>
                     <td style="max-width:180px;">
-                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value=""/>
+                        <input type="text" name="" class="form-control goods_info" value=""/>
                     </td>
                     <td class="goods_cas"></td>
                     <td class="spec"></td>
@@ -54,7 +54,7 @@
                     <td class="s_price"></td>
                     <td class="num_sum"></td>
                     <td style="max-width: 80px;">
-                        <input type="text" name="goods_order[remark][]" class="form-control" value=""></td>
+                        <input type="text" name="" class="form-control remark" value=""></td>
                     <td>
                         <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
                     </td>
@@ -62,7 +62,7 @@
                 <tr id="append_obj_1">
                     <td class="goods_id"></td>
                     <td style="max-width:180px;">
-                        <input type="text" name="goods_order[goods_name][]" class="form-control goods_info" value=""/>
+                        <input type="text" name="goods_order[1][goods_name]" class="form-control goods_info" value=""/>
                     </td>
                     <td class="goods_cas"></td>
                     <td class="spec"></td>
@@ -70,7 +70,7 @@
                     <td class="s_price"></td>
                     <td class="num_sum"></td>
                     <td style="max-width: 80px;">
-                        <input type="text" class="form-control" name="goods_order[remark][]" value=""></td>
+                        <input type="text" class="form-control" name="goods_order[1][remark]" value=""></td>
                     <td>
                         <span class="btn btn-xs btn-danger btn-remove remove_demo"><i class="fa fa-times"></i></span>
                     </td>
